# llm_client

./: .env.template  .gitignore  new-proj-setup.md  pyproject.toml  rawrequirements.txt  requirements.txt  setup.md  todo.md
.claude/: settings.json
docs/: chromaClient.md  env.md  index.md  loaders.md  splitters.md  template.md
docs/embedding/: image-embed.md  text-embed.md  ultimate-image-extractor.md
docs/llm/: image.md  llm.md
docs/misc/: embedding_models_query_vs_documents.md  structured_output_just_plain_prompt_engineering.md  system_prompts_and_small_models.md
examples/: simplechatbot.py
examples/phase1/lesson1/: exercise1.py  exercise2.py  exercise3.py  exercise4.py  project-CLI-chatbot.py
examples/phase1/lesson2/: exercise1.py  exercise2.py  exercise3.py  exercise4.py
examples/phase1/lesson3/: exercise1.py  exercise2.py
examples/phase1/lesson4/: exercise1.py  exercise2.py  exercise3.py
examples/phase2/lesson1/: exercise1.py  exercise2.py  exercise3.py
examples/phase2/lesson2/: exercise1.py  exercise2.py  exercise3.py  exercise4.py
examples/phase2/lesson3/: exercise1.py  exercise2.py  exercise3.py  exercise4.py
examples/phase2/lesson4/: exercise1.py  exercise2.py
llm_client/: __init__.py  chroma_client.py  config.py  loaders.py
llm_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llm_client/embedding/: image_embedding.py  text_embedding.py  ultimate_image_extactor.py
llm_client/llm/: image_spawner.py  llm_spawner.py
src/: OLD-llm_client.py  __init__.py  chroma_client.py  config.py  loaders.py  splitter.py
src/embedding/: text_embedding.py
src/llm/: image_spawner.py  llm_spawner.py
tests/: config.py  test_1_llm.py  test_2_image.py  test_3_text-embed.py  test_4_image-embed.py  test_5_ultimate-image-extractor.py  test_6_loaders.py  test_7_splitters.py  test_8_chroma.py  test_9_prefix_verify.py  test_base_import.py  test_menu.py
(+38 files in other folders)
