[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_client"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-ollama",
    "langchain-text-splitters",
    "langgraph",
    "python-dotenv",
    "pydantic",
    "rich",
]

[project.optional-dependencies]
ocr = [
    "pillow",
    "langchain-community",
    "unstructured",
    "pdfminer-six",
    "pi-heif",
    "pdf2image",
    "pytesseract",
    "unstructured-pytesseract",
]
rag = [
    "langchain-chroma",
    "langchain-community",
]
vision = [
    "pillow",
    "replicate",
    "pybase64",
]
full = [
    "pillow",
    "langchain-community",
    "unstructured",
    "pdfminer-six",
    "pi-heif",
    "pdf2image",
    "pytesseract",
    "unstructured-pytesseract",
    "langchain-chroma",
    "replicate",
    "pybase64",
    "unstructured-inference",
    "questionary",
    # torch and CLIP require manual install — see docs/index.md
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_client*"]
